# 15441-fall23-p1

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: address.h.2FB512EC0245B807.idx  argparse.hpp.951BB2FF39B89F4C.idx  config.h.D38DC31CE70DE575.idx  connection.h.6541E1DAC3316419.idx  error.h.6E02C9EACEC6F136.idx  fragment.cpp.220D9102D9B16BCF.idx  fragment.h.7E0F5AEACCF51ECD.idx  graph.cpp.6A16338BDC24BF32.idx  graph.h.2A046AA327E7368B.idx  message.cpp.CA6CE7B6AE0EE09B.idx  message.h.5C17999CCB98FFFA.idx  message_queue.c.2D7E940F459948B8.idx  message_queue.h.299C947CDB80EC3B.idx  networking.cpp.9612277D6790F460.idx  networking.h.76CC0320AEB5A185.idx  node.c.4AE2EC68A8F11926.idx  node.h.82D2B5B951EE3A2E.idx  (+35 more)
framework/: CMakeLists.txt  error.h  fragment.cpp  fragment.h  message.cpp  message.h  networking.cpp  networking.h  orchestrator.cpp  orchestrator.h
mixnet/: CMakeLists.txt  address.h  config.h  connection.h  node.c  node.h  packet.h  packet_init.c  packet_init.h  routing.c  routing.h  stp.c  stp.h  temp.c  utils.c  utils.h
testing/: CMakeLists.txt
testing/common/: CMakeLists.txt  graph.cpp  graph.h  testcase.cpp  testcase.h  testing.h
testing/cp1/: CMakeLists.txt  lab_binary_tree.cpp  run_tests.sh  testcase_full_mesh_easy.cpp  testcase_full_mesh_hard.cpp  testcase_line_easy.cpp  testcase_line_hard.cpp  testcase_link_failure_mesh.cpp  testcase_link_failure_ring.cpp  testcase_link_failure_root.cpp  testcase_ring_easy.cpp  testcase_ring_hard.cpp  testcase_tiebreak_multi.cpp  testcase_tiebreak_parent_mesh.cpp  testcase_tiebreak_parent_ring.cpp  testcase_tiebreak_pathlen.cpp  testcase_tree_easy.cpp  testcase_tree_hard.cpp  testcase_unreachable.cpp
testing/cp2/: CMakeLists.txt  run_tests.sh  testcase_mixing.cpp  testcase_ping.cpp  testcase_random.cpp  testcase_sp_asymmetric_mesh.cpp  testcase_sp_asymmetric_ring.cpp  testcase_sp_symmetric_mesh.cpp  testcase_sp_symmetric_ring.cpp  testcase_sp_uniform_mesh.cpp  testcase_sp_uniform_ring.cpp
